<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="FB_WriteDataToCSV" Id="{d0c36675-e81c-4e48-98b2-5d75592e8c34}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_WriteDataToCSV
VAR_INPUT
	
	bWriteData		: BOOL;
	sFileNamePath	: STRING(255);
	aData			: ARRAY[0..200] OF ST_EventsHistory; // TYPE OF DATA CHANGE DEPENDIG OF HOW MUCH YOU WANT TO SAVE
	aDataLength 	: DINT;
	sDate			: STRING(255);
	
	nMAX_CSV_ROWS	: UDINT;
	nMAX_CSV_COLUMNS: UDINT;
	
	bAcknowledge 		: BOOL; //FEEDBACK OF DATA HISTORY RESET
	

END_VAR
VAR_OUTPUT
	
	bBusy			: BOOL;
	bError			: BOOL;
	nErrId			: UDINT;
	bDataWrited		: BOOL;
	
END_VAR
VAR
	
	
	sCSVField		: T_MaxString := '';(* Single CSV field value (column, record field) *)
	nRow	 		: UDINT 	:= 0;(* Row number (record) *)
	nColumn			: UDINT 	:= 0;(* Column number (record field) *)
	hFile			: UINT		:= 0;(* File handle of the source file *)
	step			: DWORD 	:= 0;
	fbFileOpen		: FB_FileOpen;(* Opens file *)
	fbFileClose		: FB_FileClose;(* Closes file *)
	fbFilePuts		: FB_FilePuts;(* Writes one record (line) *)
	fbWriter		: FB_CSVMemBufferWriter;(* Helper function block used to create CSV data bytes (single record line) *)
	sCSVLine		: T_MaxString := '';(* Single CSV text line (row, record), we are using string as record buffer (your are able to see created fields) *)
	database		: ARRAY[0..1000, 0..4] OF STRING(255(*MAX STRING LENGTH*));// THIS NEEDS TO SET DEPENDING OF THE FUNCTION. ROWS: AMOUNT OF ARRAYS. COLUMS: AMOUNT OF DATA PER ARRAY
	nRowIndex		: DINT;
	i				: DINT;
	sCSVDate		: STRING(255);
	bFirstScan		: BOOL;
	rWriteCSV		: R_TRIG;
	rWriteData		: R_TRIG;
	
	sFileName		: T_MaxString ;(* CSV destination file path and name *)
	bResetCSVData	: BOOL;
	bWriteCSV		: BOOL;(* Rising edge starts program execution *)
	
	
END_VAR
VAR_IN_OUT

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//TO USE THIS FUNCTION DEFINE "MAX ROWS", "MAX COLUMS" AND "MAX STRING LENGTH". THEY SHOULD BE EQUAL TO INPUTS
ACT_Write();
ACT_CSVSettings();


IF NOT bFirstScan THEN
	
	sCSVDate								:= sDate;
	bFirstScan								:= TRUE;

END_IF]]></ST>
    </Implementation>
    <Action Name="ACT_CSVSettings" Id="{eaa016a4-e454-449a-b9d6-9441c13de3af}">
      <Implementation>
        <ST><![CDATA[rWriteData( CLK := bWriteData);

IF sCSVDate <> sDate THEN
	
	bWriteCSV							:= TRUE;
	sCSVDate							:= sDate;
	
END_IF

sFileName 								:= CONCAT(sFileNamePath,CONCAT( STR1 := '_', STR2 := CONCAT( STR1:= sCSVDate, STR2 := '.csv')));


IF rWriteData.Q THEN
	
	FOR i := 0 TO aDataLength DO
				
					database[nRowIndex + i,0]					:= 	aData[i].sEventTex;
					database[nRowIndex + i,1]					:= 	aData[i].sType;
					database[nRowIndex + i,2]					:= 	aData[i].sDate;
					database[nRowIndex + i,3]					:= 	aData[i].sTime;
				
	END_FOR
	
	i													:= 0;
	
	bDataWrited											:= TRUE;
	nRowIndex											:= nRowIndex + 201;

	

END_IF

IF bAcknowledge THEN
	
	bDataWrited											:= FALSE;

END_IF

IF bResetCSVData THEN
	
	FOR i := 0 TO nMAX_CSV_ROWS DO
				
					database[i,0]					:= 	'';
					database[i,1]					:=  '';
					database[i,2]					:= 	'';
					database[i,3]					:= 	'';
				
	END_FOR
	nRowIndex 										:= 0;		
	bResetCSVData									:= FALSE;
	i												:= 0;
END_IF





	]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_Write" Id="{3cb6e3fa-a131-4ef4-92c3-536f8043665e}">
      <Implementation>
        <ST><![CDATA[rWriteCSV( CLK := bWriteCSV);
CASE step OF
	0:	(* Wait for rising edge at bWrite variable *)
		IF bWriteCSV THEN
				
			bBusy 	:= TRUE;
			bError	:= FALSE;
			nErrId	:= 0;
			hFile	:= 0;
			nRow	:= 0;
			nColumn	:= 0;
			step 	:= 1;

		END_IF

	1:	(* Open source file *)
		fbFileOpen(  bExecute := FALSE  );
		fbFileOpen( sNetId := NetAmsId , sPathName := sFileName, nMode := FOPEN_MODEWRITE OR FOPEN_MODETEXT,(* Open file in TEXT mode! *)
					ePath := PATH_GENERIC, bExecute := TRUE );
		step := 2;
		bWriteCSV	:= FALSE;

	2:(* Wait until open not busy *)
		fbFileOpen( bExecute := FALSE, bError => bError, nErrID => nErrID, hFile => hFile );
		IF NOT fbFileOpen.bBusy THEN
			IF NOT fbFileOpen.bError THEN
				step := 3;
			ELSE(* Error: file not found? *)
				step := 100;
			END_IF
		END_IF

	3:(* Convert one PLC record to CSV format *)
		sCSVLine := '';
		fbWriter.eCmd := eEnumCmd_First;(* Write first field value *)
		IF nRow <= nMAX_CSV_ROWS THEN

			FOR nColumn := 0 TO nMAX_CSV_COLUMNS BY 1 DO

				sCSVField := STRING_TO_CSVFIELD( database[ nRow, nColumn ], FALSE );(* TODO: Get field value from your application *)

				(* Add new field to the record buffer *)
				fbWriter( 	pBuffer := ADR( sCSVLine ), cbBuffer := SIZEOF( sCSVLine ) - 1, putValue := sCSVField, pValue := 0, cbValue := 0,
							bCRLF := ( nColumn = nMAX_CSV_COLUMNS ) );(* bCRLF == TRUE => Write CRLF after the last field value *)
				IF fbWriter.bOk THEN
					fbWriter.eCmd := eEnumCmd_Next;(* Write next field value *)
				ELSE(* Error *)
					step := 100;
					RETURN;
				END_IF
				
			END_FOR(* FOR nColumn := 0... *)

			(* FB_FilePuts adds allready CR (carriage return) to the written line.
			We have to replace the $R$L characters with $L character to avoid double CR. *)
			IF RIGHT( sCSVLine, 2 ) = '$R$L' THEN
				sCSVLine := REPLACE( sCSVLine, '$L', 2, LEN( sCSVLine ) - 1 );
			END_IF

			nRow := nRow + 1;(* Increment number of created records (rows) *)
			step := 4;(* Write record to the file *)

		ELSE(* All rows written => Close file *)
			step := 10;
			bResetCSVData := TRUE;
		END_IF

	4:	(* Write single text line *)
		fbFilePuts( bExecute := FALSE );
		fbFilePuts( sNetId := NetAmsId , hFile := hFile, sLine := sCSVLine, bExecute := TRUE );
		step := 5;

	5:(* Wait until write not busy *)
		fbFilePuts( bExecute := FALSE, bError => bError, nErrID => nErrID );
		IF NOT fbFilePuts.bBusy THEN
			IF NOT fbFilePuts.bError THEN
				step := 3;(* Write next record *)
			ELSE(* Error *)
				step := 100;
			END_IF
		END_IF

	10:	(* Close source file *)
		fbFileClose( bExecute := FALSE );
		fbFileClose( sNetId := NetAmsId , hFile := hFile, bExecute := TRUE );
		step := 11;

	11:(* Wait until close not busy *)
		fbFileClose( bExecute := FALSE, bError => bError, nErrID => nErrID );
		IF ( NOT fbFileClose.bBusy ) THEN
			hFile := 0;
			step := 100;
		END_IF

	100: (* Error or ready step => cleanup *)
		IF ( hFile <> 0 ) THEN
			step := 10; (* Close the source file *)
		ELSE
			bBusy := FALSE;
			step := 0;	(* Ready *)
		END_IF

END_CASE
]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_WriteDataToCSV">
      <LineId Id="213" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="211" Count="1" />
      <LineId Id="210" Count="0" />
      <LineId Id="209" Count="0" />
    </LineIds>
    <LineIds Name="FB_WriteDataToCSV.ACT_CSVSettings">
      <LineId Id="213" Count="0" />
      <LineId Id="267" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="214" Count="0" />
      <LineId Id="276" Count="0" />
      <LineId Id="300" Count="0" />
      <LineId Id="216" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="238" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="233" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="279" Count="0" />
      <LineId Id="252" Count="2" />
      <LineId Id="251" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="239" Count="0" />
      <LineId Id="257" Count="1" />
      <LineId Id="269" Count="0" />
      <LineId Id="268" Count="0" />
      <LineId Id="286" Count="0" />
      <LineId Id="236" Count="1" />
      <LineId Id="235" Count="0" />
      <LineId Id="234" Count="0" />
      <LineId Id="270" Count="2" />
      <LineId Id="275" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="273" Count="0" />
      <LineId Id="287" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="298" Count="0" />
      <LineId Id="290" Count="5" />
      <LineId Id="297" Count="0" />
      <LineId Id="288" Count="0" />
      <LineId Id="302" Count="0" />
      <LineId Id="299" Count="0" />
      <LineId Id="301" Count="0" />
      <LineId Id="289" Count="0" />
      <LineId Id="261" Count="0" />
      <LineId Id="231" Count="0" />
      <LineId Id="230" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="FB_WriteDataToCSV.ACT_Write">
      <LineId Id="125" Count="0" />
      <LineId Id="2" Count="2" />
      <LineId Id="106" Count="0" />
      <LineId Id="6" Count="6" />
      <LineId Id="113" Count="0" />
      <LineId Id="13" Count="6" />
      <LineId Id="128" Count="0" />
      <LineId Id="20" Count="42" />
      <LineId Id="127" Count="0" />
      <LineId Id="63" Count="37" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>